Testing out various HTML functions

--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -6,6 +6,47 @@
 </head>
 
 <body>
-    Hello! I'm working on a webpage!
+    <p>Hello! I'm working on a webpage!</p>
+
+    <p>I'm excited for <strong>Invincible Season 2!</strong><br>
+    Line <b>break!!</b></p>
+
+    <!-- I am a HTML comment! -->
+
+    <h1>List Practice Assignment</h1>
+
+    <h2>Shopping List</h2>
+    <ul>
+        <li>Onion</li>
+        <li>Thyme</li>
+        <li>Rosemary</li>
+        <li>Chili</li>
+        <li>Tater tots</li>
+    </ul>
+    
+    <h2>To Do List for Tonight</h2>
+    <ol>
+        <li>Finish studying</li>
+        <li>Brush hair</li>
+        <li>Prepare coffee</li>
+    </ol>
+
+    <h2>Places I Want to Visit</h2>
+    <ul>
+        <li>Japan</li>
+        <li>Italy</li>
+        <li>New Orleans</li>
+        <li>Ireland</li>
+    </ul>
+
+    <h2>Top 5 Video Games of All Time</h2>
+    <ol>
+        <li>Pokemon BW</li>
+        <li>Insomniac's Spider-Man</li>
+        <li>Ghost of Tsushima</li>
+        <li>Genshin Impact</li>
+        <li>Skyrim</li>
+    </ol>
+
 </body>
 </html>
