Updating test to see

--- a/newtest.html
+++ b/newtest.html
@@ -8,8 +8,8 @@
 </head>
 
 <body>
-<p class="box-one">Box 1</p>
+    <p class="box-one">Box 1 test</p>
 
-<p class="box-two">Box 2</p>
+    <p class="box-two">Box 2</p>
 </body>
 </html>
